--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Clone github to firebase</string>
+    <string name="title_activity_firebase_users">Users</string>
 </resources>
